<resources>
    <string name="app_name">ER-Scan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="back_stepper_button">Back</string>
    <string name="next_stepper_button">Next</string>
    <string name="expense_report_price">Price</string>
    <string name="expense_report_vat">VAT</string>
    <string name="expense_report_place">Place</string>
    <string name="submit_expense_valid_button">Submit ER</string>
    <string name="message_submitted_message">Expense successfully submitted</string>
    <string name="email_edittext_hint">Email</string>
    <string name="password_edittext_hint">Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="error_login_toast_text">Credential are wrong, please try again</string>
    <string name="first_name_tv_hint">First name</string>
    <string name="last_name_tv_hint">Last name</string>
    <string name="id_tv_hint">ID: 123456789AZERTYUIO</string>
    <string name="user_firstname_tv_hint">First name: Wara</string>
    <string name="userLastname_tv_hint">First name: Booooooo</string>
    <string name="notification_switch_button_text">Notification</string>
    <string name="position_switch_button_text">Position</string>
    <string name="location_popup_title">Location needed</string>
    <string name="location_permission_explanation">Your location is needed only to show your ER\'s on the map</string>
    <string name="ok_text">Ok</string>
    <string name="cancel_text">Cancel</string>
    <string name="notification_popup_title">Notification permission needed</string>
    <string name="notification_permission_explanation">Allow us to send notifications</string>
    <string name="bug_edittext_hint">Description of the bug...</string>
    <string name="bug_type_hint_tv">Type1</string>
    <string name="logout_menu_drawer">Logout</string>
    <string name="report_bug_menu_drawer">Report Bug</string>
    <string name="history_menu_drawer">History</string>
    <string name="add_er_menu_drawer">Add ER</string>
    <string name="home_menu_drawer">Home</string>
    <string name="share_menu_drawer">Share</string>

    <string-array name="but_types">
        <item>None</item>
        <item>Login</item>
        <item>Sending ER</item>
        <item>History map</item>
    </string-array>

    <string name="title_activity_history_map_user">Map</string>
    <string name="history_fragment_toolbar_title">Your history</string>
    <string name="old_password_text_input">Old password</string>
    <string name="indication_for_password_tv">Your password must contain 8 caracters at least, 1 uppercase and 1 number</string>
    <string name="update_password_button">Update</string>
    <string name="new_password_et">New password</string>
    <string name="choose_er_type_toolbar_title">Choose expense category</string>
    <string name="grid_cell_description_hint">Description</string>
    <string name="account_parameters_save_btn">Save params</string>
    <string name="account_parameters_update_pwd_btn">Update Password</string>
    <string name="start_btn_text">OK, let\'s start !</string>
    <string name="pager_page_1_description">Keep a history of your expense reports on a map</string>
    <string name="home_text_part2">Welcome to ER Scan</string>
    <string name="home_text_part1">Hi,</string>
    <string name="last_expense_title">Your last expenses</string>
    <string name="total_expenses_month_hint">Total expenses (Month): 360€</string>
    <string name="validated_expenses_hint"> Validated expenses: 4</string>
    <string name="refused_expenses_hint"> Refused expenses: 1</string>
    <string name="no_er_history_text">You don\'t have any history yet</string>
    <string name="expense_detail_toolbar_title">Expense detail</string>

</resources>
