<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/scan_er"
            android:icon="@drawable/scan_icon"
            android:title="@string/scan_menu_drawer" />
        <item
            android:id="@+id/add_er"
            android:icon="@drawable/add_er"
            android:title="@string/add_er_menu_drawer" />
        <item
            android:id="@+id/er_history"
            android:icon="@drawable/er_history"
            android:title="@string/history_menu_drawer" />
        <item
            android:id="@+id/bug_reporting"
            android:icon="@drawable/bug"
            android:title="@string/report_bug_menu_drawer" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_menu_drawer" />
            <item
                android:id="@+id/logout_btn"
                android:icon="@drawable/logout"
                android:title="@string/logout_menu_drawer" />
        </menu>
    </item>

</menu>
