<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user_account.UpdateUserPasswordActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/update_password_toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/button_color"
        app:popupTheme="@style/AppTheme.AppBarOverlay">

        <ImageView
            android:id="@+id/back_to_account_settings"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="26dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Uptade password"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/old_password_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/logo_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/old_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/old_password_text_input"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/indication_for_password_tv"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_password_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/new_password_et"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/update_user_password"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/button_color"
        android:layout_gravity="center"
        android:text="@string/update_password_button"
        android:textAllCaps="false"
        android:textSize="@dimen/sp16"
        android:textColor="@color/white"
        android:layout_marginTop="150dp"/>


</LinearLayout>